@@ -4,7 +4,7 @@
 	xmlns:p="http://www.springframework.org/schema/p" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-2.5.xsd">
 	
-	<bean id="secDatasource" class="org.springframework.jndi.JndiObjectFactoryBean">
+	<bean id="secDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
 		<property name="resourceRef" value="true" />
 		<property name="jndiName" value="jdbc/PFFSEC" />
 		<property name="lookupOnStartup" value="true" />
@@ -14,12 +14,12 @@
 		<property name="jndiName" value="jdbc/PFF" />
 		<property name="lookupOnStartup" value="true" />
 	</bean>
-	<bean id="auditDatasource" class="org.springframework.jndi.JndiObjectFactoryBean">
+	<bean id="auditDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
 		<property name="resourceRef" value="true" />
 		<property name="jndiName" value="jdbc/PFFAUDIT" />
 		<property name="lookupOnStartup" value="true" />
 	</bean>
-	<bean id="extDatasource" class="org.springframework.jndi.JndiObjectFactoryBean">
+	<bean id="extDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
 		<property name="resourceRef" value="true" />
 		<property name="jndiName" value="jdbc/PFFEXT" />
 		<property name="lookupOnStartup" value="true" />
