@@ -62,11 +62,11 @@
 	</bean>
 	<bean id="secTransactionManager"
 		class="org.springframework.jdbc.datasource.DataSourceTransactionManager">
-		<property name="dataSource" ref="secDatasource" />
+		<property name="dataSource" ref="secDataSource" />
 	</bean>
 	<bean id="auditTransactionManager"
 		class="org.springframework.jdbc.datasource.DataSourceTransactionManager">
-		<property name="dataSource" ref="auditDatasource" />
+		<property name="dataSource" ref="auditDataSource" />
 	</bean>
 
 	<bean id="propertyConfigurer"
@@ -103,7 +103,7 @@
 		<property name="config" ref="environmentVariablesConfiguration" />
 	</bean>
 	
-	<bean id="secDatasource" class="org.springframework.jndi.JndiObjectFactoryBean">
+	<bean id="secDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
 	  	<property name="resourceRef" value="true"/>		
 		<property name="jndiName" value="jdbc/PFFSEC"/>
 		<property name="lookupOnStartup" value="true"/>
@@ -113,17 +113,17 @@
 		<property name="jndiName" value="jdbc/PFF"/>
 		<property name="lookupOnStartup" value="true"/>
 	</bean>
-	<bean id="auditDatasource" class="org.springframework.jndi.JndiObjectFactoryBean">
+	<bean id="auditDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
 	  	<property name="resourceRef" value="true"/>		
 		<property name="jndiName" value="jdbc/PFFAUDIT"/>
 		<property name="lookupOnStartup" value="true"/>
 	</bean>
-	<bean id="extDatasource" class="org.springframework.jndi.JndiObjectFactoryBean">
+	<bean id="extDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
 	  	<property name="resourceRef" value="true"/>		
 		<property name="jndiName" value="jdbc/PFFEXT"/>
 		<property name="lookupOnStartup" value="true"/>
 	</bean>
-	<bean id="finOneDatasource" class="org.springframework.jndi.JndiObjectFactoryBean">
+	<bean id="finOneDataSource" class="org.springframework.jndi.JndiObjectFactoryBean">
 		<property name="resourceRef" value="true" />
 		<property name="jndiName" value="jdbc/FINONE" />
 		<property name="lookupOnStartup" value="true" />
@@ -132,14 +132,14 @@
 
 	<bean id="nextidviewDAO" class="com.pennant.backend.dao.impl.NextIdViewSQLServerDaoImpl">
 		<property name="dataSource" ref="dataSource" />
-		<property name="extDataSource" ref="extDatasource" />
+		<property name="extDataSource" ref="extDataSource" />
 	</bean>
 
 	<bean id="secNextidviewDAO" class="com.pennant.backend.dao.impl.NextIdViewSQLServerDaoImpl">
-		<property name="dataSource" ref="secDatasource" />
+		<property name="dataSource" ref="secDataSource" />
 	</bean>
 
 	<bean id="auditNextidviewDAO" class="com.pennant.backend.dao.impl.NextIdViewSQLServerDaoImpl">
-		<property name="dataSource" ref="auditDatasource" />
+		<property name="dataSource" ref="auditDataSource" />
 	</bean>
 </beans>
